--- a/orca-db-services/tsconfig.json
+++ b/orca-db-services/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "ts-node": {
-    "files": true,
-    "esm": true
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "compilerOptions": {
     "target": "es2020",
-    "module": "es2020",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "./lib",
     "rootDir": "./src",
     "declaration": true,
     "strict": true,
     "esModuleInterop": true,
-    "sourceMap": true
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "allowJs": true
   },
   "include": [
     "src"
