--- a/orca-db-services/package.json
+++ b/orca-db-services/package.json
@@ -61,6 +61,7 @@
     "@feathersjs/socketio-client": "^5.0.34",
     "@feathersjs/transport-commons": "^5.0.34",
     "@feathersjs/typebox": "^5.0.34",
+    "feathers-hooks-common": "^8.2.1",
     "knex": "^3.1.0",
     "pg": "^8.15.6",
     "socket.io-client": "^4.7.4",
