--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,37 @@
-name:
+name: Trigger Jenkins on PR Merge
 
 on:
   pull_request:
     branches:
-      - 'orac-dev'
+      - 'orca-dev'
     types:
       - closed
 
 jobs:
   show-info:
-    if_merged:
-      if: github.event.pull_request.merged == true
-      runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
 
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-        - name: Get Node version
-          id: get_version
-          run: |
-            VERSION=$(node -p "require('./package.json').version")
-            echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - name: Get Node version
+        id: get_version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-        - name: Show branch and version
-          run: |
-            echo "Branch name: ${{ github.ref_name }}"
-            echo "Project version: ${{ env.VERSION }}"
+      - name: Show branch and version
+        run: |
+          echo "Branch name: ${{ github.ref_name }}"
+          echo "Project version: ${{ env.VERSION }}"
 
-        - name: Trigger Jenkins Job
-          env:
-            JENKINS_USER: ${{ secrets.JENKINS_USER }}
-            JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
-            VERSION: ${{ env.VERSION }}
-          run: |
-            curl -X POST "https://builder2.warriortrading.com/job/orca.db.services/buildWithParameters?BRANCH_NAME=${{ github.ref_name }}" \
-              --user "${JENKINS_USER}:${JENKINS_TOKEN}"
+      - name: Trigger Jenkins Job
+        env:
+          JENKINS_USER: ${{ secrets.JENKINS_USER }}
+          JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
+          VERSION: ${{ env.VERSION }}
+        run: |
+          curl -X POST "https://builder2.warriortrading.com/job/orca.db.services/buildWithParameters?CURRENT_VERSION=${VERSION}&BRANCH_NAME=${{ github.ref_name }}" \
+            --user "${JENKINS_USER}:${JENKINS_TOKEN}"
