--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
           JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
           VERSION: ${{ env.VERSION }}
         run: |
-          curl -X POST "https://builder2.warriortrading.com/job/orca.db.services/buildWithParameters?CURRENT_VERSION=${VERSION}&BRANCH_NAME=${{ github.ref_name }}" \
+          curl -X POST "https://builder2.warriortrading.com/job/orca.db.services/buildWithParameters?BRANCH_NAME=${{ github.ref_name }}" \
             --user "${JENKINS_USER}:${JENKINS_TOKEN}"
