--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,10 @@ jobs:
           echo "Branch name: ${{ github.ref_name }}"
           echo "Project version: ${{ env.VERSION }}"
 
-      - name: Trigger Jenkins Job
+      - name: Trigger Jenkins Multibranch Pipeline
         env:
           JENKINS_USER: ${{ secrets.JENKINS_USER }}
           JENKINS_TOKEN: ${{ secrets.JENKINS_TOKEN }}
-          VERSION: ${{ env.VERSION }}
         run: |
-          curl -X POST "https://builder2.warriortrading.com/job/orca.db.services/buildWithParameters?BRANCH_NAME=${{ github.ref_name }}" \
+          curl -X POST "https://builder2.warriortrading.com/job/orca.db.services/job/${{ github.ref_name }}/build" \
             --user "${JENKINS_USER}:${JENKINS_TOKEN}"
