--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "database": "postgresql",
     "framework": "koa",
     "transports": [
-      "rest",
-      "websockets"
+      "rest"
     ],
     "schema": "typebox"
   },
@@ -57,14 +56,13 @@
     "@feathersjs/knex": "^5.0.34",
     "@feathersjs/koa": "^5.0.34",
     "@feathersjs/schema": "^5.0.34",
-    "@feathersjs/socketio": "^5.0.34",
-    "@feathersjs/socketio-client": "^5.0.34",
+
     "@feathersjs/transport-commons": "^5.0.34",
     "@feathersjs/typebox": "^5.0.34",
     "feathers-hooks-common": "^8.2.1",
     "knex": "^3.1.0",
     "pg": "^8.15.6",
-    "socket.io-client": "^4.7.4",
+
     "winston": "^3.17.0"
   },
   "devDependencies": {
